samples/_failures_safe/1761462548_6e249b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47f467f9.c: In function ‘main’:
./samples/SAFE/__tmp_47f467f9.c:169:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  169 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_47f467f9.c:169:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_47f467f9.c:169:9: error: expected ‘;’ at end of input
  169 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_47f467f9.c:169:5: error: expected declaration or statement at end of input
  169 |     size
      |     ^~~~
